// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticateForm Cancelling Registration 1`] = `
Array [
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.username",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      null,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.error",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      false,
    ],
    "hasChangedValue": false,
    "method": "set",
    "path": "login.loading",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
  Object {
    "args": Array [
      "initial",
    ],
    "hasChangedValue": true,
    "method": "set",
    "path": "login.mode.current",
    "revert": [Function],
  },
]
`;

exports[`AuthenticateForm Initial render 1`] = `
<div>
  <h3>
    Login
  </h3>
  <form
    data-test="authenticateForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Login
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`AuthenticateForm Submitting the form Submit successfully 1`] = `
<div>
  <h3>
    Login
  </h3>
  <form
    data-test="authenticateForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Login
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`AuthenticateForm Submitting the form Submit with invalid password 1`] = `
<div>
  <h3>
    Login
  </h3>
  <form
    data-test="authenticateForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control is-invalid"
        id="password"
        name="password"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Invalid username or password
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Login
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`AuthenticateForm Submitting the form Submit with network error 1`] = `
<div>
  <h3>
    Login
  </h3>
  <form
    data-test="authenticateForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Login
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
    <div
      class="form-group"
    >
      <div
        class="alert alert-danger"
        role="alert"
      >
        An unexpected error occurred: Error: Network Error
      </div>
    </div>
  </form>
</div>
`;

exports[`AuthenticateForm Submitting the form Submit with whitespace password 1`] = `
<div>
  <h3>
    Login
  </h3>
  <form
    data-test="authenticateForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Login
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`AuthenticateForm Submitting the form Submit without entering anything 1`] = `
<div>
  <h3>
    Login
  </h3>
  <form
    data-test="authenticateForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control is-invalid"
        id="password"
        name="password"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a password
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Login
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
